chore: 更新InCabin配置和项目文档
✅ 更新内容：
- InCabin项目配置文件（MSS/DSS/System）
- 烧录APP启动命令文档
- 固件与雷达配置匹配报告
- 开发记录和工具文档更新
- 健康检测方案文档修订

🗑️ 清理内容：
- 删除project-code/README.md（已移至子项目）
- 删除附录F（已合并到附录D）
- 删除旧版环境搭建图片

📝 文档维护：
- 更新batchstatus.txt状态文件
- 更新SDK固件研究README
- 完善健康检测实施文档

--- a/项目文档/3-固件工具/02-固件智能管理系统/应用固件与雷达配置文件匹配算法.md
+++ b/项目文档/3-固件工具/02-固件智能管理系统/应用固件与雷达配置文件匹配算法.md
@@ -1,11 +1,6 @@
 # 🎯 应用固件 ↔ 雷达配置文件匹配算法
 
-> **创建日期**: 2025-12-20  
-> **更新日期**: 2025-12-23  
-> **当前版本**: v4.0.2（增强语义匹配）  
-> **目标**：准确推荐配套的雷达配置文件，确保固件可以成功启动  
-> **状态**: ✅ 已实现、测试并优化  
-> **版本历史**:
+> **创建日期**: 2025-12-20**更新日期**: 2025-12-23**当前版本**: v4.0.2（增强语义匹配）**目标**：准确推荐配套的雷达配置文件，确保固件可以成功启动**状态**: ✅ 已实现、测试并优化**版本历史**:
 >
 > - ✅ v2.0：基于目录树关系的匹配算法
 > - ✅ v3.0：配置文件匹配算法重大更新（基于实测验证）
@@ -375,10 +370,10 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
             'warnings': [],
             'fatal_errors': []  # v4.0新增：致命错误
         }
-      
+    
         # ========== P0级验证：必需命令检测（v4.0新增，最高优先级）==========
         required_check = self._check_required_commands(config.path)
-      
+    
         if not required_check['has_all_required']:
             score = -999999.0  # 🔴 一票否决：缺少必需命令
             validation['p0_required_commands'] = False
@@ -386,45 +381,45 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
                 f"❌ 缺少必需命令：{', '.join(required_check['missing_commands'])}"
             )
             # 缺少必需命令直接标记为不可用，但仍继续检测其他问题
-      
+    
         if required_check['has_invalid_commands']:
             score -= 800.0  # 🔴 严重惩罚：使用不存在的命令
             validation['p0_required_commands'] = False
             validation['fatal_errors'].append(
                 f"❌ 使用无效命令：{', '.join(required_check['invalid_commands'])}"
             )
-      
+    
         # ========== P0级验证：文件编码检测（最关键）==========
         encoding_check = self._check_file_encoding(config.path)
-      
+    
         if not encoding_check['is_ascii']:
             score -= 1000.0  # 🔴 严重惩罚：UTF-8编码
             validation['p0_encoding'] = False
             validation['warnings'].append(f"❌ UTF-8编码问题：{encoding_check['issue']}")
-      
+    
         if encoding_check['has_chinese']:
             score -= 1000.0  # 🔴 严重惩罚：中文字符
             validation['p0_encoding'] = False
             validation['warnings'].append(f"❌ 包含中文字符（字节{encoding_check['position']}）")
-      
+    
         if encoding_check['has_percent_comment']:
             score -= 500.0   # 🔴 惩罚：%注释符
             validation['p0_comment'] = False
             validation['warnings'].append("⚠️ 使用%注释符（可能不兼容）")
-      
+    
         # ========== P0级验证：天线配置方式检测 ==========
         antenna_check = self._check_antenna_config(config.path)
-      
+    
         if antenna_check['uses_antGeometryCfg']:
             score -= 800.0   # 🔴 严重惩罚：使用不存在的命令
             validation['p0_antenna'] = False
             validation['warnings'].append("❌ 使用antGeometryCfg（命令不存在）")
-      
+    
         if antenna_check['missing_antGeometryBoard']:
             score -= 600.0   # 🔴 惩罚：缺少Board配置
             validation['p0_antenna'] = False
             validation['warnings'].append("❌ 缺少antGeometryBoard配置")
-      
+    
         if antenna_check['uses_manual_config']:
             manual_completeness = antenna_check['manual_completeness']
             if manual_completeness < 4:
@@ -433,7 +428,7 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
                 validation['warnings'].append(
                     f"⚠️ 手动天线配置不完整（{manual_completeness}/4步）"
                 )
-      
+    
         # ========== P1级评分：同SDK路径关系（核心）==========
         if self._is_same_sdk(firmware.path, config.path):
             score += 80.0
@@ -441,10 +436,10 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
         elif self._is_related_in_sdk(firmware.path, config.path):
             score += 60.0
             validation['p1_sdk'] = 60
-      
+    
         # ========== P1级评分：核心参数匹配验证 ==========
         param_check = self._check_core_parameters(config.path, firmware)
-      
+    
         # frameCfg参数匹配
         if param_check['frameCfg_match']:
             score += 50.0
@@ -453,7 +448,7 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
             validation['warnings'].append(
                 f"⚠️ frameCfg不匹配：{param_check['frameCfg_diff']}"
             )
-      
+    
         # runtimeCalibCfg检测
         if param_check['runtimeCalibCfg'] == 1:
             score += 30.0
@@ -461,7 +456,7 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
         elif param_check['runtimeCalibCfg'] == 0:
             score -= 20.0
             validation['warnings'].append("⚠️ runtimeCalibCfg=0（禁用校准）")
-      
+    
         # lowPowerCfg匹配
         if param_check['lowPowerCfg'] == 1:
             score += 20.0
@@ -469,10 +464,10 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
         elif param_check['lowPowerCfg'] == 0:
             score -= 10.0
             validation['warnings'].append("⚠️ lowPowerCfg=0（未启用低功耗）")
-      
+    
         # ========== P1级评分：配置文件名语义匹配 ==========
         config_semantics = self._parse_config_filename(config.filename)
-      
+    
         # InCabin Demo特殊处理
         if 'incabin' in firmware.path.lower():
             if 'cpd' in config.filename.lower():  # Child Presence Detection
@@ -481,7 +476,7 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
                 score += 60.0
             elif 'intrusion' in config.filename.lower():  # Intrusion Detection
                 score += 60.0
-      
+    
         # 通用场景语义匹配
         if 'scene' in config_semantics:
             scene = config_semantics['scene']
@@ -489,32 +484,32 @@ def match_configs_for_firmware(self, firmware: FirmwareInfo) -> List[Tuple[Confi
             if any(kw in scene for kw in ['child_presence', 'intrusion', 'vital', 'gesture']):
                 if any(kw in fw_lower for kw in ['cpd', 'intrusion', 'vital', 'gesture']):
                     score += 50.0
-      
+    
         # ========== P2级评分：应用场景文本匹配 ==========
         if firmware.subcategory and config.application:
             if firmware.subcategory in config.application:
                 score += 20.0
             elif config.application in firmware.subcategory:
                 score += 15.0
-      
+    
         # ========== P2级评分：芯片型号匹配 ==========
         if '6844' in config.filename.lower():
             score += 20.0  # 6844专用
         elif '68xx' in config.filename.lower():
             score += 15.0  # 68xx系列通用
-      
+    
         # ========== P2级评分：检测距离合理性 ==========
         if config.range_m > 0:
             if config.range_m <= 10 and self._is_short_range_app(firmware):
                 score += 15.0
             elif 10 < config.range_m <= 50:
                 score += 10.0
-      
+    
         # ========== P2级评分：功耗模式匹配 ==========
         if 'power' in config_semantics:
             if config_semantics['power'] == 'low_power' and 'low_power' in firmware.path.lower():
                 score += 10.0
-      
+    
         matches.append((config, score, validation))
   
     # 按评分排序
@@ -575,19 +570,19 @@ def _check_required_commands(self, config_path: str) -> dict:
     try:
         with open(config_path, 'r', encoding='ascii', errors='ignore') as f:
             content = f.read()
-      
+    
         # 检查必需命令
         for cmd in REQUIRED_COMMANDS:
             if cmd not in content:
                 result['has_all_required'] = False
                 result['missing_commands'].append(cmd)
-      
+    
         # 检查无效命令
         for cmd in INVALID_COMMANDS:
             if cmd in content:
                 result['has_invalid_commands'] = True
                 result['invalid_commands'].append(cmd)
-      
+    
         # 检查天线配置方式
         if ANTENNA_BOARD in content:
             result['antenna_config_mode'] = 'board'
@@ -608,9 +603,9 @@ def _check_required_commands(self, config_path: str) -> dict:
                 result['antenna_config_mode'] = 'missing'
                 result['has_all_required'] = False
                 result['missing_commands'].append('antGeometryBoard或手动4步配置')
-      
+    
         return result
-      
+    
     except Exception as e:
         result['has_all_required'] = False
         result['missing_commands'].append(f'Error reading file: {str(e)}')
@@ -640,13 +635,13 @@ def _check_file_encoding(self, config_path: str) -> dict:
         # 读取文件二进制内容
         with open(config_path, 'rb') as f:
             content = f.read()
-      
+    
         # 检测BOM
         if content.startswith(b'\xef\xbb\xbf'):  # UTF-8 BOM
             result['is_ascii'] = False
             result['issue'] = 'UTF-8 BOM detected'
             return result
-      
+    
         # 逐字节检查
         for i, byte in enumerate(content):
             # ASCII范围：0x00-0x7F
@@ -656,7 +651,7 @@ def _check_file_encoding(self, config_path: str) -> dict:
                 result['position'] = i
                 result['issue'] = f'Non-ASCII byte 0x{byte:02x} at position {i}'
                 return result
-      
+    
         # 检测注释符（文本层面）
         try:
             text = content.decode('ascii')
@@ -664,9 +659,9 @@ def _check_file_encoding(self, config_path: str) -> dict:
                 result['has_percent_comment'] = True
         except:
             pass
-      
+    
         return result
-      
+    
     except Exception as e:
         result['is_ascii'] = False
         result['issue'] = f'Error reading file: {str(e)}'
@@ -693,15 +688,15 @@ def _check_antenna_config(self, config_path: str) -> dict:
     try:
         with open(config_path, 'r', encoding='ascii', errors='ignore') as f:
             content = f.read()
-      
+    
         # 检测antGeometryCfg（错误命令）
         if 'antGeometryCfg' in content:
             result['uses_antGeometryCfg'] = True
-      
+    
         # 检测antGeometryBoard（推荐方式）
         if 'antGeometryBoard' not in content:
             result['missing_antGeometryBoard'] = True
-          
+        
             # 检查手动配置完整度
             manual_commands = [
                 'antGeometryTX',
@@ -710,13 +705,13 @@ def _check_antenna_config(self, config_path: str) -> dict:
                 'compRangeBiasAndRxChanPhase'
             ]
             completeness = sum(1 for cmd in manual_commands if cmd in content)
-          
+        
             if completeness > 0:
                 result['uses_manual_config'] = True
                 result['manual_completeness'] = completeness
-      
+    
         return result
-      
+    
     except Exception as e:
         return result
 
@@ -743,36 +738,36 @@ def _check_core_parameters(self, config_path: str, firmware: FirmwareInfo) -> di
     try:
         with open(config_path, 'r', encoding='ascii', errors='ignore') as f:
             content = f.read()
-      
+    
         # 解析frameCfg（期望：64 0 1358 1 100 0）
         import re
         frame_match = re.search(r'frameCfg\s+(\d+)\s+(\d+)\s+(\d+)\s+(\d+)\s+(\d+)\s+(\d+)', content)
         if frame_match:
             loops = int(frame_match.group(3))
             period = int(frame_match.group(5))
-          
+        
             if loops == 1358 and period == 100:
                 result['frameCfg_match'] = True
             else:
                 result['frameCfg_diff'] = f'loops={loops}(期望1358), period={period}(期望100)'
-      
+    
         # 解析runtimeCalibCfg
         runtime_match = re.search(r'runtimeCalibCfg\s+(\d+)', content)
         if runtime_match:
             result['runtimeCalibCfg'] = int(runtime_match.group(1))
-      
+    
         # 解析lowPowerCfg
         lowpower_match = re.search(r'lowPowerCfg\s+(\d+)', content)
         if lowpower_match:
             result['lowPowerCfg'] = int(lowpower_match.group(1))
-      
+    
         # 解析adcDataDitherCfg
         dither_match = re.search(r'adcDataDitherCfg\s+(\d+)', content)
         if dither_match:
             result['adcDataDitherCfg'] = int(dither_match.group(1))
-      
+    
         return result
-      
+    
     except Exception as e:
         return result
 
@@ -918,6 +913,7 @@ def _is_same_sdk(self, fw_path: str, cfg_path: str) -> bool:
   result['lowPowerCfg'] = int(lowpower_match.group(1))
 
   # 解析adcDataDitherCfg
+
   adc_match = re.search(r'adcDataDitherCfg\s+(\d+)', content)
   if adc_match:
   result['adcDataDitherCfg'] = int(adc_match.group(1))
@@ -1411,10 +1407,12 @@ ERROR: Parsing .cfg file failed
 ### v4.0.1 → v4.0.2 关键改进
 
 **问题发现**（2025-12-23）：
+
 - 291个应用固件，几乎都推荐相同的Top 5配置
 - 用户反馈："hwa_dc_sub和hello_world怎么推荐一样的配置？"
 
 **根本原因分析**：
+
 1. **SDK路径权重过高**（80分，占总分31%）
    - 同一SDK下所有固件获得相同的80分基础分
    - 其他评分项差异太小，无法区分不同固件
@@ -1426,14 +1424,14 @@ ERROR: Parsing .cfg file failed
 
 **修正措施**：
 
-| 项目 | v4.0.1 | v4.0.2 | 改进效果 |
-|-----|--------|--------|---------|
-| SDK路径权重 | 80分 | 40分 | 降低50% |
-| 固件名称语义匹配 | 0分 | 60分 | 新增核心功能 |
-| Demo目录关联 | 0分 | 30分 | 新增关联检测 |
-| 关键词完全匹配 | - | +30分/个 | 精准匹配 |
-| 关键词部分匹配 | - | +15分/个 | 模糊匹配 |
-| 总分范围 | -999999~255 | -999999~305 | 增加50分 |
+| 项目             | v4.0.1      | v4.0.2      | 改进效果     |
+| ---------------- | ----------- | ----------- | ------------ |
+| SDK路径权重      | 80分        | 40分        | 降低50%      |
+| 固件名称语义匹配 | 0分         | 60分        | 新增核心功能 |
+| Demo目录关联     | 0分         | 30分        | 新增关联检测 |
+| 关键词完全匹配   | -           | +30分/个    | 精准匹配     |
+| 关键词部分匹配   | -           | +15分/个    | 模糊匹配     |
+| 总分范围         | -999999~255 | -999999~305 | 增加50分     |
 
 **关键词映射示例**：
 
@@ -1461,14 +1459,15 @@ high_accuracy_demo_68xx.cfg
 
 **匹配效果对比**：
 
-| 固件 | v4.0.1推荐 | v4.0.2推荐 | 改进 |
-|-----|----------|----------|------|
-| hwa_dc_sub | 6844_profile_4T4R_tdm.cfg | hwa_相关配置 | ✅ 精准 |
-| hello_world | 6844_profile_4T4R_tdm.cfg | basic/demo配置 | ✅ 精准 |
+| 固件                  | v4.0.1推荐                | v4.0.2推荐            | 改进    |
+| --------------------- | ------------------------- | --------------------- | ------- |
+| hwa_dc_sub            | 6844_profile_4T4R_tdm.cfg | hwa_相关配置          | ✅ 精准 |
+| hello_world           | 6844_profile_4T4R_tdm.cfg | basic/demo配置        | ✅ 精准 |
 | demo_in_cabin_sensing | 6844_profile_4T4R_tdm.cfg | cpd/sbr/intrusion.cfg | ✅ 精准 |
-| vital_signs_demo | 6844_profile_4T4R_tdm.cfg | vital_signs.cfg | ✅ 精准 |
+| vital_signs_demo      | 6844_profile_4T4R_tdm.cfg | vital_signs.cfg       | ✅ 精准 |
 
 **经验教训**：
+
 1. ✅ **利用所有可用信息**：文件名是重要的语义信息源
 2. ✅ **避免单一维度主导**：任何评分项不应超过总分的30%
 3. ✅ **关键词映射很重要**：hello→basic, incabin→cpd扩展了匹配范围
@@ -1487,8 +1486,8 @@ high_accuracy_demo_68xx.cfg
 
 ---
 
-**文档版本**: v4.0.2  
-**最后更新**: 2025-12-23  
+**文档版本**: v4.0.2
+**最后更新**: 2025-12-23
 **状态**: ✅ 算法已实现、测试、优化并投入使用
 
 ---
