--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-00-能力评估报告.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-00-能力评估报告.md
@@ -4,6 +4,19 @@
 > **评估日期**: 2026-01-05
 > **修订日期**: 2026-01-05（根据讨论修正）
 > **状态**: ✅ 已完成
+>
+> ⚠️ **实战修正（2026-01-07）**：本报告评估的是芯片理论能力，结论正确但**严重低估了实施难度**！
+> 
+> **关键发现**：
+> - 方案A（InCabin扩展）在实战中失败 → 切换为方案B（标准mmw_demo扩展）
+> - 标准mmw_demo**没有任何健康检测功能**，需从零开发
+> - **工期被严重低估**：人存检测2天 → 实际需1-2周，姿态检测3天 → 实际需2-3周
+> - **架构复杂度被忽略**：需深入理解DPC、DSS/DSP协同、xWRL6432移植难度
+> 
+> 详见：
+> - [02-方案确认](./AWRL6844雷达健康检测-02-方案确认.md) - 方案调整
+> - [实战诊断报告](../../2-开发记录/2026-01-07/2026-01-07_InCabin方案实战失败全面诊断.md) - InCabin失败分析
+> - [附录G-SDK源码架构分析](./AWRL6844雷达健康检测-附录G-SDK源码架构分析.md) - mmw_demo真实架构
 
 ---
 
@@ -13,37 +26,37 @@
 
 Wisefido综合健康检测系统需要毫米波雷达模块实现：
 
-| 功能 | 描述 | 优先级 |
-|------|------|--------|
-| 人存检测 | 检测房间是否有人 | P0 必需 |
-| 人数统计 | 统计房间内人数 | P1 期望 |
-| 姿态检测 | 识别站/坐/躺/走/跌倒 | P0 必需 |
-| 跌倒检测 | 实时检测跌倒事件并告警 | P0 必需 |
-| 静态杂波抑制 | 识别并排除固定家具 | P0 必需 |
-| 背景学习 | 自动学习房间环境 | P1 期望 |
-| 呼吸检测 | 检测呼吸频率 | P1 期望 |
-| 心率检测 | 检测心率 | P2 可选 |
+| 功能         | 描述                   | 优先级  |
+| ------------ | ---------------------- | ------- |
+| 人存检测     | 检测房间是否有人       | P0 必需 |
+| 人数统计     | 统计房间内人数         | P1 期望 |
+| 姿态检测     | 识别站/坐/躺/走/跌倒   | P0 必需 |
+| 跌倒检测     | 实时检测跌倒事件并告警 | P0 必需 |
+| 静态杂波抑制 | 识别并排除固定家具     | P0 必需 |
+| 背景学习     | 自动学习房间环境       | P1 期望 |
+| 呼吸检测     | 检测呼吸频率           | P1 期望 |
+| 心率检测     | 检测心率               | P2 可选 |
 
 ### 1.2 评估平台
 
-| 项目 | 规格 |
-|------|------|
-| **芯片型号** | AWRL6844 |
-| **天线配置** | 4TX 4RX（16虚拟天线） |
-| **频段** | 57-64GHz (60GHz) |
-| **MCU** | R5F @ 200MHz + C66x DSP @ 450MHz |
-| **内存** | 2.5MB |
-| **定位** | 汽车车内应用（Automotive InCabin） |
+| 项目               | 规格                               |
+| ------------------ | ---------------------------------- |
+| **芯片型号** | AWRL6844                           |
+| **天线配置** | 4TX 4RX（16虚拟天线）              |
+| **频段**     | 57-64GHz (60GHz)                   |
+| **MCU**      | R5F @ 200MHz + C66x DSP @ 450MHz   |
+| **内存**     | 2.5MB                              |
+| **定位**     | 汽车车内应用（Automotive InCabin） |
 
 ### 1.3 应用场景对比
 
-| 因素 | 车内场景（TI原设计） | Wisefido室内场景 | 影响 |
-|------|---------------------|-----------------|------|
-| **环境振动** | 有（发动机、路面） | 几乎无 | **室内更好** ✅ |
-| **背景噪声** | 高 | 低（安静） | **室内更好** ✅ |
-| **目标状态** | 可能活动 | 老人常静止 | **室内更好** ✅ |
-| **检测距离** | 0.5-2m | 0.5-6m | 室内稍难 ⚠️ |
-| **多径干扰** | 复杂（金属车身） | 较少 | **室内更好** ✅ |
+| 因素               | 车内场景（TI原设计） | Wisefido室内场景 | 影响                  |
+| ------------------ | -------------------- | ---------------- | --------------------- |
+| **环境振动** | 有（发动机、路面）   | 几乎无           | **室内更好** ✅ |
+| **背景噪声** | 高                   | 低（安静）       | **室内更好** ✅ |
+| **目标状态** | 可能活动             | 老人常静止       | **室内更好** ✅ |
+| **检测距离** | 0.5-2m               | 0.5-6m           | 室内稍难 ⚠️         |
+| **多径干扰** | 复杂（金属车身）     | 较少             | **室内更好** ✅ |
 
 **结论**：室内环境比车内更有利于检测，尤其是微弱的生命体征信号！
 
@@ -72,31 +85,31 @@ AWRL6844 官方应用场景：
 
 ### 3.1 AWRL6844可用的SDK资源
 
-| 资源 | 位置 | 功能 |
-|------|------|------|
+| 资源                   | 位置          | 功能                 |
+| ---------------------- | ------------- | -------------------- |
 | **InCabin Demo** | Radar Toolbox | 人存、占用、入侵检测 |
-| **CNN分类器** | InCabin Demo | 深度学习推理 |
-| **Capon 2D** | InCabin Demo | 高精度AoA估计 |
-| **mmwave_demo** | MMWAVE_L_SDK | 基础点云检测 |
+| **CNN分类器**    | InCabin Demo  | 深度学习推理         |
+| **Capon 2D**     | InCabin Demo  | 高精度AoA估计        |
+| **mmwave_demo**  | MMWAVE_L_SDK  | 基础点云检测         |
 
 ### 3.2 Vital Signs（生命体征）SDK支持情况
 
-| 芯片 | Vital Signs Demo | 备注 |
-|------|-----------------|------|
-| IWR6843 | ✅ 有 | 工业级，支持呼吸+心率 |
-| IWRL6432 | ✅ 有 | 工业级，支持呼吸+心率 |
-| **AWRL6844** | ❌ **无** | 汽车级，无官方Demo |
+| 芯片               | Vital Signs Demo | 备注                  |
+| ------------------ | ---------------- | --------------------- |
+| IWR6843            | ✅ 有            | 工业级，支持呼吸+心率 |
+| IWRL6432           | ✅ 有            | 工业级，支持呼吸+心率 |
+| **AWRL6844** | ❌**无**   | 汽车级，无官方Demo    |
 
 **关键问题**：TI未为AWRL6844提供Vital Signs官方Demo！
 
 ### 3.3 原因分析
 
-| 因素 | AWRL6844 (车载) | IWR6843 (工业) |
-|------|----------------|----------------|
-| **目标场景** | 车内（有振动） | 室内（静止环境） |
-| **主要用途** | 检测/分类 | 生命体征监测 |
-| **环境噪声** | 高（发动机、路面） | 低 |
-| **产品定位** | 安全检测为主 | 健康监测为主 |
+| 因素               | AWRL6844 (车载)    | IWR6843 (工业)   |
+| ------------------ | ------------------ | ---------------- |
+| **目标场景** | 车内（有振动）     | 室内（静止环境） |
+| **主要用途** | 检测/分类          | 生命体征监测     |
+| **环境噪声** | 高（发动机、路面） | 低               |
+| **产品定位** | 安全检测为主       | 健康监测为主     |
 
 ---
 
@@ -104,13 +117,13 @@ AWRL6844 官方应用场景：
 
 ### 4.1 人存检测 ✅ 完全支持
 
-| 评估项 | 结果 |
-|--------|------|
-| **硬件支持** | ✅ 完全支持 |
-| **SDK支持** | ✅ InCabin Demo已有 |
-| **算法复杂度** | 低 |
-| **实现难度** | ⭐ 简单 |
-| **推荐** | ✅ **强烈推荐** |
+| 评估项               | 结果                 |
+| -------------------- | -------------------- |
+| **硬件支持**   | ✅ 完全支持          |
+| **SDK支持**    | ✅ InCabin Demo已有  |
+| **算法复杂度** | 低                   |
+| **实现难度**   | ⭐ 简单              |
+| **推荐**       | ✅**强烈推荐** |
 
 **实现方式**：直接使用InCabin Demo的occupancyClassifier或intrusionDetection。
 
@@ -118,15 +131,16 @@ AWRL6844 官方应用场景：
 
 ### 4.2 姿态检测 ✅ 完全支持
 
-| 评估项 | 结果 |
-|--------|------|
-| **硬件支持** | ✅ 完全支持 |
-| **SDK支持** | ⚠️ 需从xWRL6432移植 |
-| **算法复杂度** | 中等 |
-| **实现难度** | ⭐⭐⭐ 中等 |
-| **推荐** | ✅ **推荐** |
+| 评估项               | 结果                  |
+| -------------------- | --------------------- |
+| **硬件支持**   | ✅ 完全支持           |
+| **SDK支持**    | ⚠️ 需从xWRL6432移植 |
+| **算法复杂度** | 中等                  |
+| **实现难度**   | ⭐⭐⭐ 中等           |
+| **推荐**       | ✅**推荐**      |
 
 **实现方式**：
+
 - 参考xWRL6432 Pose & Fall Detection
 - 利用InCabin Demo的cnn_classifier库
 - 移植pose.c姿态分类逻辑
@@ -137,20 +151,22 @@ AWRL6844 官方应用场景：
 
 ### 4.3 跌倒检测 ✅ 完全支持
 
-| 评估项 | 结果 |
-|--------|------|
-| **硬件支持** | ✅ 完全支持 |
-| **SDK支持** | ⚠️ 需从xWRL6432移植 |
-| **算法复杂度** | 中等 |
-| **实现难度** | ⭐⭐⭐ 中等 |
-| **推荐** | ✅ **推荐** |
+| 评估项               | 结果                  |
+| -------------------- | --------------------- |
+| **硬件支持**   | ✅ 完全支持           |
+| **SDK支持**    | ⚠️ 需从xWRL6432移植 |
+| **算法复杂度** | 中等                  |
+| **实现难度**   | ⭐⭐⭐ 中等           |
+| **推荐**       | ✅**推荐**      |
 
 **实现方式**：
+
 - 基于姿态检测结果
 - 检测"非躺→躺"的快速变化
 - 状态机确认跌倒事件
 
 **目标指标**：
+
 - 检测率 ≥95%
 - 误报率 <5%
 - 响应时间 <500ms
@@ -159,13 +175,13 @@ AWRL6844 官方应用场景：
 
 ### 4.4 呼吸检测 ⚠️ 理论支持
 
-| 评估项 | 结果 |
-|--------|------|
-| **硬件支持** | ⚠️ 理论上支持 |
-| **SDK支持** | ❌ 无现成Demo |
-| **算法复杂度** | **高** |
-| **实现难度** | ⭐⭐⭐⭐ 困难 |
-| **推荐** | ⚠️ **可作为研究课题** |
+| 评估项               | 结果                         |
+| -------------------- | ---------------------------- |
+| **硬件支持**   | ⚠️ 理论上支持              |
+| **SDK支持**    | ❌ 无现成Demo                |
+| **算法复杂度** | **高**                 |
+| **实现难度**   | ⭐⭐⭐⭐ 困难                |
+| **推荐**       | ⚠️**可作为研究课题** |
 
 **技术分析**：
 
@@ -181,10 +197,12 @@ AWRL6844 官方应用场景：
 ```
 
 **可行性评估**：
+
 - 目标静止时：**可行**（成功率60-80%）
 - 目标活动时：**困难**（成功率<30%）
 
 **如需实现**：
+
 1. 参考IWR6843 Vital Signs算法思路
 2. 需自研相位提取和信号处理算法
 3. 预计研发周期：2-4周
@@ -193,13 +211,13 @@ AWRL6844 官方应用场景：
 
 ### 4.5 心率检测 ❌ 有限支持
 
-| 评估项 | 结果 |
-|--------|------|
-| **硬件支持** | ⚠️ 边缘能力 |
-| **SDK支持** | ❌ 无 |
-| **算法复杂度** | **极高** |
-| **实现难度** | ⭐⭐⭐⭐⭐ 极困难 |
-| **推荐** | ❌ **不推荐** |
+| 评估项               | 结果               |
+| -------------------- | ------------------ |
+| **硬件支持**   | ⚠️ 边缘能力      |
+| **SDK支持**    | ❌ 无              |
+| **算法复杂度** | **极高**     |
+| **实现难度**   | ⭐⭐⭐⭐⭐ 极困难  |
+| **推荐**       | ❌**不推荐** |
 
 **技术分析**：
 
@@ -216,10 +234,12 @@ AWRL6844 官方应用场景：
 ```
 
 **可行性评估**：
+
 - 理想条件下：**可能**（成功率20-40%）
 - 实际应用中：**不可靠**
 
 **建议**：
+
 - ❌ 不建议用AWRL6844做心率检测
 - ✅ 使用睡眠板做心率检测（更可靠）
 
@@ -249,13 +269,13 @@ AWRL6844 官方应用场景：
 
 **AWRL6844雷达应实现的功能**：
 
-| 优先级 | 功能 | 说明 |
-|--------|------|------|
-| **P0 必需** | 人存检测 | 直接可用 |
-| **P0 必需** | 姿态检测 | 需移植开发 |
-| **P0 必需** | 跌倒检测 | 需移植开发 |
+| 优先级            | 功能     | 说明           |
+| ----------------- | -------- | -------------- |
+| **P0 必需** | 人存检测 | 直接可用       |
+| **P0 必需** | 姿态检测 | 需移植开发     |
+| **P0 必需** | 跌倒检测 | 需移植开发     |
 | **P1 可选** | 呼吸检测 | 可作为后续研究 |
-| **P2 放弃** | 心率检测 | 由睡眠板承担 |
+| **P2 放弃** | 心率检测 | 由睡眠板承担   |
 
 ### 5.3 系统分工建议
 
@@ -288,18 +308,20 @@ AWRL6844 官方应用场景：
 ### 6.1 车载级 vs 工业级的问题
 
 **用户问题**：
+
 > "车载级比工业级更高级吧？6844比6843精度更高？为什么反而6843有Vital Signs SDK而6844没有？"
 
 **解答**：
 
-| 对比项 | AWRL6844 (车载级) | IWR6843 (工业级) |
-|--------|------------------|-----------------|
-| **等级定位** | 不是"更高级"，是**不同定位** | 面向工业/消费应用 |
-| **环境认证** | 更严格 (-40°C~140°C) | 标准 (-40°C~105°C) |
-| **硬件精度** | 基本相同 | 基本相同 |
-| **主要差异** | **软件/SDK重点不同！** | 专注生命体征监测 |
+| 对比项             | AWRL6844 (车载级)                  | IWR6843 (工业级)     |
+| ------------------ | ---------------------------------- | -------------------- |
+| **等级定位** | 不是"更高级"，是**不同定位** | 面向工业/消费应用    |
+| **环境认证** | 更严格 (-40°C~140°C)             | 标准 (-40°C~105°C) |
+| **硬件精度** | 基本相同                           | 基本相同             |
+| **主要差异** | **软件/SDK重点不同！**       | 专注生命体征监测     |
 
 **根本原因**：
+
 ```
 TI的产品策略：
 ├── AWRL6844 → 车内场景 → SDK侧重检测/分类 → 无Vital Signs
@@ -312,17 +334,18 @@ TI的产品策略：
 ### 6.2 室内 vs 车内环境的问题
 
 **用户问题**：
+
 > "室内比车内更安静，检测应该更容易吧？"
 
 **解答**：✅ **完全正确！**
 
-| 环境因素 | 车内 | 室内（Wisefido场景） |
-|---------|------|---------------------|
-| 发动机振动 | ❌ 严重干扰 | ✅ 无 |
-| 路面振动 | ❌ 持续存在 | ✅ 无 |
-| 环境噪声 | ❌ 复杂多变 | ✅ 相对安静 |
-| 目标距离 | 0.5-1.5m | 1-5m（可控） |
-| 目标状态 | 坐姿为主 | 多姿态 |
+| 环境因素   | 车内        | 室内（Wisefido场景） |
+| ---------- | ----------- | -------------------- |
+| 发动机振动 | ❌ 严重干扰 | ✅ 无                |
+| 路面振动   | ❌ 持续存在 | ✅ 无                |
+| 环境噪声   | ❌ 复杂多变 | ✅ 相对安静          |
+| 目标距离   | 0.5-1.5m    | 1-5m（可控）         |
+| 目标状态   | 坐姿为主    | 多姿态               |
 
 **修正后的评估**：
 
@@ -342,23 +365,26 @@ TI的产品策略：
 ### 6.3 人数统计功能归属问题
 
 **用户问题**：
+
 > "识别人数属于哪个检测功能？"
 
 **解答**：
 
 人数统计是**独立功能**，与人存检测不同：
 
-| 功能 | 输出 | 复杂度 | SDK支持 |
-|------|------|--------|---------|
-| **人存检测** | 有人/无人 (0/1) | 低 | ✅ 直接可用 |
-| **人数统计** | N个人 (0,1,2,3...) | 高 | ⚠️ 需开发 |
-| **人员追踪** | 位置+ID | 很高 | ⚠️ 需开发 |
+| 功能               | 输出               | 复杂度 | SDK支持     |
+| ------------------ | ------------------ | ------ | ----------- |
+| **人存检测** | 有人/无人 (0/1)    | 低     | ✅ 直接可用 |
+| **人数统计** | N个人 (0,1,2,3...) | 高     | ⚠️ 需开发 |
+| **人员追踪** | 位置+ID            | 很高   | ⚠️ 需开发 |
 
 **InCabin Demo现状**：
+
 - `intrusionDetection`: 侧重有/无，分区域检测
 - `occupancyClassifier`: 侧重分类，但主要是车内座位级别
 
 **如需精确人数统计**：
+
 - 需要点云聚类 + 多目标追踪
 - 可参考3D People Tracking Demo
 - 工作量：额外1-2周
@@ -370,18 +396,20 @@ TI的产品策略：
 ### 6.4 静态物体识别/背景学习
 
 **用户问题**：
+
 > "有没有自动识别屋内固定物品的功能？让系统自动学习哪些是家具、墙壁等静态物体。"
 
 **解答**：
 
 分为两个层面：
 
-| 功能 | 现状 | 说明 |
-|------|------|------|
-| **静态杂波移除 (Clutter Removal)** | ✅ **已有** | MTI滤波器，移除静止物体回波 |
-| **背景学习/建模** | ❌ 需开发 | 自动学习房间结构 |
+| 功能                                     | 现状             | 说明                        |
+| ---------------------------------------- | ---------------- | --------------------------- |
+| **静态杂波移除 (Clutter Removal)** | ✅**已有** | MTI滤波器，移除静止物体回波 |
+| **背景学习/建模**                  | ❌ 需开发        | 自动学习房间结构            |
 
 **InCabin Demo已有功能**：
+
 ```
 CLI命令: clutterRemoval 1
 功能: 开启Moving Target Indication
@@ -390,6 +418,7 @@ CLI命令: clutterRemoval 1
 ```
 
 **背景学习（需开发）**：
+
 ```
 功能设想：
 ├── 启动时空房间采集（无人状态）
@@ -400,19 +429,20 @@ CLI命令: clutterRemoval 1
 ```
 
 **建议**：
-- P0阶段：使用现有`clutterRemoval`
+
+- P0阶段：使用现有 `clutterRemoval`
 - P1阶段：可考虑开发简单背景学习功能
 
 ---
 
 ## 8. 风险与应对
 
-| 风险 | 概率 | 影响 | 应对措施 |
-|------|------|------|---------|
-| 姿态分类精度不达标 | 中 | 高 | 参考xWRL6432成熟算法，充分测试 |
-| 跌倒误报率过高 | 中 | 高 | 优化状态机参数，增加确认时间 |
-| 呼吸检测不可靠 | 高 | 中 | 作为可选功能，优先用睡眠板 |
-| CNN模型不兼容 | 低 | 高 | InCabin已有cnn_classifier可用 |
+| 风险               | 概率 | 影响 | 应对措施                       |
+| ------------------ | ---- | ---- | ------------------------------ |
+| 姿态分类精度不达标 | 中   | 高   | 参考xWRL6432成熟算法，充分测试 |
+| 跌倒误报率过高     | 中   | 高   | 优化状态机参数，增加确认时间   |
+| 呼吸检测不可靠     | 高   | 中   | 作为可选功能，优先用睡眠板     |
+| CNN模型不兼容      | 低   | 高   | InCabin已有cnn_classifier可用  |
 
 ---
 
@@ -430,20 +460,20 @@ CLI命令: clutterRemoval 1
 
 ### 9.2 项目重新定位
 
-| 原定位 | 新定位 |
-|--------|--------|
+| 原定位           | 新定位                                           |
+| ---------------- | ------------------------------------------------ |
 | AWRL6844跌倒检测 | **AWRL6844雷达健康检测**（人存+姿态+跌倒） |
-| 单一功能 | **综合功能模块** |
+| 单一功能         | **综合功能模块**                           |
 
 ### 9.3 预计工期
 
-| 功能 | 工期 |
-|------|------|
-| 人存检测 | 0.5天（直接使用） |
-| 姿态检测 | 3天 |
-| 跌倒检测 | 2天 |
-| 联调测试 | 2天 |
-| **总计** | **7.5天** |
+| 功能           | 工期              |
+| -------------- | ----------------- |
+| 人存检测       | 0.5天（直接使用） |
+| 姿态检测       | 3天               |
+| 跌倒检测       | 2天               |
+| 联调测试       | 2天               |
+| **总计** | **7.5天**   |
 
 ---
 
