--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-02-方案确认.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-02-方案确认.md
@@ -1,12 +1,25 @@
-﻿# 📋 AWRL6844雷达健康检测-02-方案确认
+# 📋 AWRL6844雷达健康检测-02-方案确认
 
 > **目标**: 确认最终实施方案
-> **确认日期**: 2026-01-05
-> **状态**: ✅ 已确认
+> **初次确认**: 2026-01-05
+> **方案修订**: 2026-01-07（实战后调整）
+> **状态**: 🔄 已修订为方案B
 
 ---
 
-## 1. 方案确认
+## 📑 文档导航
+
+- [第1部分：原始方案确认（2026-01-05）](#1-原始方案确认2026-01-05) - 保留历史决策
+- [第2部分：实战测试（2026-01-06～07）](#2-实战测试2026-01-0607) - 遇到的问题
+- [第3部分：方案修订（2026-01-07）](#3-方案修订2026-01-07) - 调整决策
+- [第4部分：最终确认方案](#4-最终确认方案) - 当前执行路线
+
+---
+
+## 1. 原始方案确认（2026-01-05）
+
+> 📌 **说明**：以下是基于理论分析和SDK文档做出的初次方案选择。
+> 保留此部分是为了展示决策思路的演进过程。
 
 ### 1.1 选定方案
 
@@ -226,14 +239,377 @@ CLI命令设计（建议）:
 
 ## 9. 确认签字
 
-| 项目     | 确认                                |
-| -------- | ----------------------------------- |
-| 方案选择 | ✅ 方案A（InCabin Demo扩展）        |
-| 功能范围 | ✅ 人存+姿态+跌倒+背景学习+区域划分 |
-| 工期接受 | ✅ Phase 1: 8天 / Phase 2: 2周      |
-| 用户确认 | ✅ 2026-01-05                       |
+| 项目     | 确认          |
+| -------- | ------------- |
+| 用户确认 | ✅ 2026-01-05 |
 
 ---
+
+## 2. 实战测试（2026-01-06～07）
+
+### 2.1 测试执行情况
+
+按照原计划开始实施方案A（InCabin Demo扩展），完成了以下工作：
+
+| 阶段               | 工作内容             | 状态          | 说明                      |
+| ------------------ | -------------------- | ------------- | ------------------------- |
+| **环境搭建** | 编译InCabin Demo固件 | ✅ 完成       | 成功编译，无错误          |
+|                    | 烧录固件到EVM        | ✅ 完成       | 烧录成功                  |
+|                    | 配置文件研究         | ✅ 完成       | 创建5个版本配置           |
+| **功能验证** | 测试点云获取         | ❌ 失败       | **5次测试均无点云** |
+|                    | 工具兼容性测试       | ⚠️ 发现问题 | TLV格式不兼容             |
+|                    | 参数优化尝试         | ❌ 无效       | CFAR降至5.0仍无效         |
+
+### 2.2 遇到的核心问题
+
+**问题现象**：
+
+```
+所有配置测试均显示 Detection Points = 0
+无法获得任何点云数据
+```
+
+**测试记录**：
+
+| 版本      | 日期  | CFAR K0     | 检测区域 | 可视化工具     | 固件版本      | 结果        |
+| --------- | ----- | ----------- | -------- | -------------- | ------------- | ----------- |
+| v1.0-v1.2 | 01-06 | 8.0         | 1.6m×2m | SDK Visualizer | 自编译InCabin | Points=0 ❌ |
+| v1.3      | 01-07 | 8.0         | 1.6m×2m | SDK Visualizer | 自编译InCabin | Points=0 ❌ |
+| v1.4      | 01-07 | 7.0(TI推荐) | 1.6m×2m | SDK Visualizer | 自编译InCabin | Points=0 ❌ |
+| v1.5      | 01-07 | 5.0(极低)   | 4m×5m   | InCabin GUI    | 自编译InCabin | Points=0 ❌ |
+
+**对比测试**（硬件验证）：
+
+```
+✅ 标准mmwave_demo.release.appimage + 6844_profile_4T4R_tdm.cfg
+   → 点云数据正常显示
+   → 证明硬件工作正常
+```
+
+### 2.3 问题分析
+
+经过深入分析，发现方案A遇到以下障碍：
+
+#### 障碍1: 天线相位校准缺失 ⭐ 关键
+
+**发现**：
+
+- InCabin Demo使用**Capon 2D波束成形算法**
+- Capon算法对**天线相位误差极其敏感**
+- TI Point Cloud Tuning Guide明确要求："Step 1: Perform phase calibration"
+
+**当前状态**：
+
+```cfg
+compRangeBiasAndRxChanPhase 0 1 0 1 0 1 0 1 0 -1 0 -1 0 -1 0 -1 0 1 0 1 0 1 0 1 0 -1 0 -1 0 -1 0 -1 0
+                            ↑ 使用的是默认值，不是实际测量的校准参数
+```
+
+**校准要求**：
+
+- 需要**DCA1000数据采集卡**（项目未配备）
+- 或使用**mmWave Studio**执行复杂的校准流程（需1-2天学习）
+
+**为什么标准Demo不需要？**
+
+- 标准Demo使用DoA (Direction of Arrival) 算法
+- DoA算法对相位误差容忍度较高
+- InCabin的Capon算法精度要求高10倍
+
+---
+
+#### 障碍2: TLV数据格式专有化
+
+**发现**：InCabin Demo使用专有的TLV格式
+
+| 数据类型           | 标准Demo | InCabin Demo | SDK Visualizer |
+| ------------------ | -------- | ------------ | -------------- |
+| 点云数据           | Type=1   | Type=3001    | 无法识别       |
+| Occupancy特征      | 无       | Type=3002    | 无法识别       |
+| Classification结果 | 无       | Type=1041    | 无法识别       |
+
+**影响**：
+
+- SDK Visualizer无法解析InCabin点云 → 预期内
+- InCabin GUI也显示Points=0 → **说明根本没产生点云**
+
+**详细分析**：见 `../06-SDK固件研究/InCabin与标准Demo数据格式对比.md`
+
+---
+
+#### 障碍3: 场景适配性未知
+
+**InCabin设计初衷**：
+
+- 🚗 车内空间（狭小、封闭）
+- 📏 短距离检测（0.5-2m）
+- 👶 婴儿检测（弱目标）
+
+**养老监测场景**：
+
+- 🏠 室内空间（开放、大房间）
+- 📏 中等距离（1-6m）
+- 👴 成人检测（强目标）
+
+**可能的问题**：
+
+- InCabin的杂波抑制算法可能过于激进
+- Zone定义逻辑可能不适合大空间
+
+---
+
+### 2.4 详细诊断报告
+
+完整的问题分析和技术细节请参考：
+
+- 📄 [2026-01-07_InCabin方案实战失败全面诊断.md](../../2-开发记录/2026-01-07/2026-01-07_InCabin方案实战失败全面诊断.md)
+- 📄 [2026-01-07_AWRL6844项目紧急重新评估报告.md](../../2-开发记录/2026-01-07/2026-01-07_AWRL6844项目紧急重新评估报告.md)
+
+---
+
+## 3. 方案修订（2026-01-07）
+
+### 3.1 方案A失败的根本原因
+
+| 原因                     | 影响    | 解决成本                          | 风险 |
+| ------------------------ | ------- | --------------------------------- | ---- |
+| **相位校准缺失**   | 🔴 致命 | 需DCA1000或2-3天学习mmWave Studio | 高   |
+| **TLV格式不兼容**  | 🟡 中等 | 需修改工具或固件                  | 中   |
+| **场景适配性**     | 🟡 中等 | 需大量参数调优                    | 未知 |
+| **隐藏前置条件多** | 🔴 严重 | 学习成本高                        | 高   |
+
+**结论**：
+
+- ❌ 方案A的"人存检测开箱即用"假设**不成立**
+- ❌ 预期的"7.5天完成"**无法实现**
+- ❌ 继续投入时间成本高，成功率仅40%
+
+---
+
+### 3.2 方案B可行性验证
+
+在测试方案A的同时，我们验证了方案B（标准mmwave_demo）：
+
+**验证结果**：
+
+```
+✅ 标准Demo固件 + TI官方配置
+   → 点云数据正常
+   → SDK Visualizer正常显示
+   → 硬件功能完全正常
+```
+
+**方案B优势重新评估**：
+
+| 维度               | 方案A (InCabin)          | 方案B (标准Demo)           | 对比 |
+| ------------------ | ------------------------ | -------------------------- | ---- |
+| **基础能力** | ⚠️ 需相位校准          | ✅ 已验证可用              | B胜  |
+| **人存检测** | 🔴 跑不起来              | 🔧 需开发（简单算法）      | B胜  |
+| **开发难度** | 🔴 高（隐藏前置条件多）  | 🟡 中（纯软件开发）        | B胜  |
+| **技术风险** | 🔴 高（40%成功率）       | 🟢 低（85%成功率）         | B胜  |
+| **工期估算** | ⏱️ 2-3天调试 + 7天开发 | ⏱️ 2天人存 + 5天姿态跌倒 | B胜  |
+| **依赖硬件** | 🔴 需DCA1000             | ✅ 无需额外硬件            | B胜  |
+
+---
+
+### 3.3 决策依据
+
+基于实战经验，方案选择的决策标准调整为：
+
+**核心原则**：
+
+1. ✅ **已验证可用** > 理论上可用
+2. ✅ **无隐藏前置条件** > 功能丰富
+3. ✅ **纯软件开发** > 依赖额外硬件
+4. ✅ **成功率高** > 开发时间短
+
+**方案对比**：
+
+```
+方案A (InCabin扩展):
+  ✅ 理论上有现成算法
+  ❌ 实际跑不起来（5次失败）
+  ❌ 需要DCA1000硬件
+  ❌ 需要深度学习mmWave Studio
+  ❌ 成功率仅40%
+  
+方案B (标准Demo扩展):
+  ✅ 已验证硬件工作正常
+  ✅ 无额外硬件需求
+  ✅ 纯软件开发
+  ✅ 成功率85%
+  ⚠️ 需自行实现人存检测（但不复杂）
+```
+
+**决策结果**：
+
+```
+❌ 放弃方案A
+✅ 采用方案B（标准mmwave_demo扩展）
+```
+
+---
+
+## 4. 最终确认方案
+
+### 4.1 选定方案（修订后）
+
+| 项目               | 确认内容                                   |
+| ------------------ | ------------------------------------------ |
+| **基础方案** | ✅**方案B：基于标准mmwave_demo开发** |
+| **基础固件** | TI官方mmwave_demo.release.appimage         |
+| **基础配置** | 6844_profile_4T4R_tdm.cfg                  |
+| **预计工期** | Phase 1: 7天 / Phase 2: 2周                |
+| **成功率**   | 85%                                        |
+
+---
+
+### 4.2 功能范围（修订后）
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│              最终功能范围（基于标准Demo）                         │
+├─────────────────────────────────────────────────────────────────┤
+│                                                                 │
+│  Phase 1A（5天）- 核心功能                                       │
+│  ├── ✅ 人存检测（点云聚类算法）                                  │
+│  ├── ✅ 姿态检测（参考xWRL6432算法）                              │
+│  └── ✅ 跌倒检测（状态机判断）                                    │
+│                                                                 │
+│  Phase 1B（2天）- 优化功能                                       │
+│  ├── ✅ 杂波移除（MTI参数调优）                                   │
+│  └── ✅ 多目标处理（点云分组）                                    │
+│                                                                 │
+│  Phase 2（2周）- 扩展研究                                        │
+│  ├── ⚠️ 区域划分（床区/活动区）                                   │
+│  ├── ⚠️ 呼吸检测尝试（基于微多普勒）                              │
+│  └── ⚠️ 人数统计（点云聚类）                                     │
+│                                                                 │
+│  不实现：                                                        │
+│  ├── ❌ 心率检测（留给睡眠板）                                    │
+│  ├── ❌ CNN分类器（改用规则判断）                                 │
+│  └── ❌ Occupancy算法（自行实现简单版）                           │
+│                                                                 │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+---
+
+### 4.3 技术路线对比
+
+**方案A (InCabin) vs 方案B (标准Demo)**：
+
+| 功能               | 方案A实现方式                      | 方案B实现方式        | 说明            |
+| ------------------ | ---------------------------------- | -------------------- | --------------- |
+| **点云获取** | ❌ Capon算法（需校准）             | ✅ DoA算法（已验证） | B可用           |
+| **人存检测** | 🔴 occupancyClassifier（跑不起来） | ✅ 点云数量判断      | B简单           |
+| **姿态检测** | 🔧 需移植                          | ✅ 参考xWRL6432算法  | 相同            |
+| **跌倒检测** | 🔧 需移植                          | ✅ 状态机判断        | 相同            |
+| **CNN分类**  | ✅ 已有库                          | ❌ 不使用（改规则）  | A优，但跑不起来 |
+
+---
+
+### 4.4 实施计划调整
+
+**原计划（基于InCabin）**：
+
+```
+第1章：环境搭建 ✅
+第2章：人存检测验证（直接使用occupancyClassifier）
+第3章：姿态检测开发
+第4章：跌倒检测开发
+...
+```
+
+**新计划（基于标准Demo）**：
+
+```
+第1章：环境搭建 ✅
+第2章：标准Demo验证 ✅
+第3章：人存检测实现（点云聚类）← 新增
+第4章：姿态检测实现（参考xWRL6432）
+第5章：跌倒检测实现（状态机）
+第6章：杂波移除优化
+第7章：多目标处理
+...
+```
+
+**详细大纲**：见 [03-实施目录大纲](./AWRL6844雷达健康检测-03-实施目录大纲.md)（已根据方案B重新编写）
+
+---
+
+### 4.5 风险管理
+
+**已规避的风险**：
+
+- ✅ 避免深陷相位校准泥潭
+- ✅ 避免DCA1000硬件依赖
+- ✅ 避免mmWave Studio学习成本
+- ✅ 避免InCabin场景不匹配问题
+
+**新的风险点**：
+
+- ⚠️ 人存检测算法需自行实现（风险等级：低）
+- ⚠️ 无CNN分类器支持（风险等级：低，可用规则代替）
+
+**风险应对**：
+
+- 人存检测：使用简单点云数量判断（点云>N → 有人）
+- 姿态检测：参考xWRL6432的pose.c算法（已验证可行）
+- 如遇困难：保留回退到IWR6843硬件的选项
+
+---
+
+## 5. 最终确认
+
+| 确认项   | 内容                              |
+| -------- | --------------------------------- |
+| 方案选择 | ✅**方案B（标准Demo扩展）** |
+| 功能范围 | ✅ 人存+姿态+跌倒+杂波+多目标     |
+| 工期接受 | ✅ Phase 1: 7天 / Phase 2: 2周    |
+| 修订确认 | ✅ 2026-01-07                     |
+
+---
+
+## 6. 经验总结
+
+### 6.1 理论vs实战的教训
+
+**教训1**：TI Demo不等于开箱即用
+
+- Quick Start Guide ≠ 完整实施指南
+- 很多Demo有隐藏的前置条件
+- 必须先小范围验证再选方案
+
+**教训2**：功能丰富≠容易实现
+
+- InCabin虽然功能丰富，但门槛高
+- 标准Demo虽然简单，但稳定可靠
+- 选择"已验证可用"的方案更稳妥
+
+**教训3**：保留历史决策的价值
+
+- 展示思考过程的严谨性
+- 说明方案调整有充分依据
+- 为后续类似决策提供参考
+
+---
+
+### 6.2 文档体系的思考
+
+| 文档                  | 性质         | 是否需要修订             |
+| --------------------- | ------------ | ------------------------ |
+| **00-能力评估** | 芯片能力边界 | ❌ 不需要（评估正确）    |
+| **01-方案讨论** | 技术路线对比 | ❌ 不需要（分析正确）    |
+| **02-方案确认** | 实施决策     | ✅ 需要（保留历史+更新） |
+| **03-实施大纲** | 具体计划     | ✅ 需要（完全重写）      |
+| **04-第X章**    | 执行细节     | ✅ 需要（基于新大纲）    |
+
+---
+
+> 📌 **下一步**: [AWRL6844雷达健康检测-03-实施目录大纲](./AWRL6844雷达健康检测-03-实施目录大纲.md)
+> 📅 **确认日期**: 2026-01-05（初次） | 2026-01-07（修订）
+> 📄 **相关文档**: [InCabin方案实战失败全面诊断](../../2-开发记录/2026-01-07/2026-01-07_InCabin方案实战失败全面诊断.md)
 
 > 📌 **下一步**: [AWRL6844雷达健康检测-03-实施目录大纲](./AWRL6844雷达健康检测-03-实施目录大纲.md)
 > 📅 **确认日期**: 2026-01-05
